system/widgets/submenu/sidebar.css
/* The sidebar menu */
.sidebar {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: #f7f7f7;
    overflow-x: hidden;
    transition: 0.5s;
    padding-top: 60px;
}

.sidebar a {
   /* padding: 8px 8px 8px 32px; */
    padding-left: 8px;
    text-decoration: none;
    font-size: 25px;
    color: #818181;
    /* display: block; */
    transition: 0.3s;
}

.sidebar a:hover {
    color: #222;
}

.sidebar .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
}

.openbtn {
    font-size: 20px;
    cursor: pointer;
    /*  background-color: #111; */
    color: #111;
    padding: 10px 15px;
    border: none;
    position: fixed;
    top: 100px;
    left: 0;
    width: 50px;
    height: 50px;
    z-index: 0;
    margin-right: 50px;
    opacity: 0.5;
}

.openbtn:hover {
/* background-color: #444; */
/* color: #000; */

}

#main {
    transition: margin-left .5s;
    padding: 16px;
}

/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
    .sidebar {padding-top: 15px;}
    .sidebar a {font-size: 18px;}
}

